# cleanish-supers

./: Cargo.toml  README.md
config/: default.json
src/: main.rs  settings.rs
src/api/models/: mod.rs
src/drivers/db/: memory.rs
src/entities/: mod.rs
src/entities/supers/: mod.rs
src/repositories/supers/: create_super.rs  mod.rs
src/usecases/: create_super.rs  delete_super.rs  get_all_supers.rs  get_super.rs  mod.rs
supers_core/: Cargo.toml
supers_core/src/: lib.rs
supers_core/src/drivers/db/: memory.rs  mod.rs
supers_core/src/repositories/: mod.rs
supers_core/src/repositories/supers/: mod.rs
supers_core/src/usecases/: create_super.rs  delete_super.rs  get_all_supers.rs  get_super.rs  mod.rs
supers_service/: Cargo.toml
supers_service/src/: main.rs  settings.rs
supers_service/src/api/: create_super.rs  delete_super.rs  get_all_supers.rs  get_super.rs  mod.rs
