[package]
name = "supers_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
